[gd_scene load_steps=20 format=3 uid="uid://diueuwbtv4w82"]

[ext_resource type="Script" uid="uid://d3c3d101qoirc" path="res://Scripts/Character/CharacterController.gd" id="1_twfof"]
[ext_resource type="Script" uid="uid://dkck14xrr3k1x" path="res://Scripts/Camera/CameraSystem.gd" id="3_67fxd"]
[ext_resource type="Script" uid="uid://b8pkkl01ky68w" path="res://Scripts/Character/MovementSystem.gd" id="4_eromc"]
[ext_resource type="Script" uid="uid://dvoxu6frkwrwi" path="res://Scripts/Camera/CameraDelay.gd" id="4_lmr44"]
[ext_resource type="Resource" uid="uid://ba6hbu0x8bufx" path="res://Scripts/Control/InputConfig_A.tres" id="5_6po8h"]
[ext_resource type="Script" uid="uid://thel4dd2jygm" path="res://Scripts/Camera/CameraZoom.gd" id="5_onbhd"]
[ext_resource type="Script" uid="uid://dga1kxck5v62n" path="res://Scripts/Control/InputCoordinator.gd" id="6_7dsvd"]
[ext_resource type="Script" uid="uid://dkqykiqarykxi" path="res://Scripts/Camera/CameraRotaion.gd" id="6_7j0ll"]
[ext_resource type="Resource" uid="uid://cm4kgu5akids1" path="res://Scripts/Character/MovementConfig_A.tres" id="6_35j32"]
[ext_resource type="Script" uid="uid://7lrw8qux87bl" path="res://Scripts/Navigation/NavigationCoordinator.gd" id="10_lmr44"]
[ext_resource type="Resource" uid="uid://dnbwhd8mk0n7k" path="res://Scripts/Navigation/NavigationConfig_A.tres" id="10_q7if1"]
[ext_resource type="Script" uid="uid://d0ic6m25rk78n" path="res://Scripts/Navigation/NavigationCore.gd" id="11_onbhd"]
[ext_resource type="Script" uid="uid://dmbi7feffstd1" path="res://Scripts/Navigation/ClickDetector.gd" id="12_7j0ll"]
[ext_resource type="Script" uid="uid://dyh1c65tt6ho4" path="res://Scripts/Navigation/CursorVisual.gd" id="13_a5yhl"]
[ext_resource type="Script" uid="uid://dsn1psl1da4sg" path="res://Scripts/Navigation/MarkerManager.gd" id="15_oyw8b"]
[ext_resource type="PackedScene" uid="uid://cbx0rhk665pls" path="res://Assets/Character.tscn" id="18_o63we"]

[sub_resource type="SphereShape3D" id="SphereShape3D_dohcx"]

[sub_resource type="CylinderMesh" id="CylinderMesh_35j32"]
top_radius = 0.01
bottom_radius = 0.01

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_jiddn"]
radius = 0.287885
height = 1.70464

[node name="CharacterController" type="Node3D" node_paths=PackedStringArray("character_body", "camera_system", "input_coordinator", "movement_system", "navigation_coordinator")]
script = ExtResource("1_twfof")
input_config = ExtResource("5_6po8h")
character_body = NodePath("CharacterBody3D")
camera_system = NodePath("CameraSystem")
input_coordinator = NodePath("InputCoordinator")
movement_system = NodePath("MovementSystem")
navigation_coordinator = NodePath("NavigationCoordinator")

[node name="CameraSystem" type="Node3D" parent="." node_paths=PackedStringArray("delay_system", "zoom_system", "rotation_system", "spring_arm", "camera", "target_object")]
script = ExtResource("3_67fxd")
delay_system = NodePath("CameraDelay")
zoom_system = NodePath("CameraZoom")
rotation_system = NodePath("CameraRotation")
spring_arm = NodePath("SpringArm3D")
camera = NodePath("SpringArm3D/CameraRig/Camera3D")
target_object = NodePath("../CharacterBody3D")

[node name="CameraDelay" type="Node" parent="CameraSystem"]
script = ExtResource("4_lmr44")
max_lead_distance = 6.0
velocity_to_distance_ratio = 1.0

[node name="CameraZoom" type="Node" parent="CameraSystem"]
script = ExtResource("5_onbhd")

[node name="CameraRotation" type="Node" parent="CameraSystem"]
script = ExtResource("6_7j0ll")

[node name="SpringArm3D" type="SpringArm3D" parent="CameraSystem"]
shape = SubResource("SphereShape3D_dohcx")
margin = 0.1

[node name="CameraRig" type="Node3D" parent="CameraSystem/SpringArm3D"]

[node name="Camera3D" type="Camera3D" parent="CameraSystem/SpringArm3D/CameraRig"]
transform = Transform3D(1, 0, 0, 0, 0.984808, 0.173648, 0, -0.173648, 0.984808, 0, 0, 0)
fov = 90.0

[node name="MeshInstance3D2" type="MeshInstance3D" parent="CameraSystem"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.5, 0)
mesh = SubResource("CylinderMesh_35j32")
skeleton = NodePath("../../CharacterBody3D")

[node name="CharacterBody3D" type="CharacterBody3D" parent="."]
collision_layer = 3
slide_on_ceiling = false

[node name="Character" parent="CharacterBody3D" instance=ExtResource("18_o63we")]

[node name="AnimationTree" parent="CharacterBody3D/Character" index="2"]
parameters/Move/blend_position = -0.844419

[node name="CollisionShape3D" type="CollisionShape3D" parent="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.853688, 0)
shape = SubResource("CapsuleShape3D_jiddn")

[node name="MeshInstance3D" type="MeshInstance3D" parent="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CylinderMesh_35j32")

[node name="InputCoordinator" type="Node" parent="."]
script = ExtResource("6_7dsvd")
input_config = ExtResource("5_6po8h")

[node name="MovementSystem" type="Node" parent="." node_paths=PackedStringArray("character_body", "camera_pivot")]
script = ExtResource("4_eromc")
movement_config = ExtResource("6_35j32")
character_body = NodePath("../CharacterBody3D")
camera_pivot = NodePath("../CameraSystem/SpringArm3D")

[node name="NavigationCoordinator" type="Node" parent="." node_paths=PackedStringArray("camera", "character_body", "navigation_core", "click_detector", "cursor_visual", "marker_manager")]
script = ExtResource("10_lmr44")
navigation_config = ExtResource("10_q7if1")
camera = NodePath("../CameraSystem/SpringArm3D/CameraRig/Camera3D")
character_body = NodePath("../CharacterBody3D")
navigation_core = NodePath("NavigationCore")
click_detector = NodePath("ClickDetector")
cursor_visual = NodePath("CursorVisual")
marker_manager = NodePath("MarkerManager")

[node name="NavigationCore" type="Node" parent="NavigationCoordinator"]
script = ExtResource("11_onbhd")

[node name="ClickDetector" type="Node" parent="NavigationCoordinator"]
script = ExtResource("12_7j0ll")

[node name="CursorVisual" type="Node" parent="NavigationCoordinator"]
script = ExtResource("13_a5yhl")

[node name="MarkerManager" type="Node" parent="NavigationCoordinator"]
script = ExtResource("15_oyw8b")

[editable path="CharacterBody3D/Character"]
